--- a/entrypoints/popup/App.css
+++ b/entrypoints/popup/App.css
@@ -1,44 +1,28 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .settings {
-  padding: 20px;
-  font-family: Arial, sans-serif;
-}
-
-.settings h2 {
-  margin-bottom: 15px;
-}
-
-.settings div {
-  margin-bottom: 10px;
-}
-
-.settings label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.settings input[type="text"],
-.settings input[type="file"] {
-  width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
-}
-
-.settings button {
-  padding: 10px 15px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.settings button:hover {
-  background-color: #45a049;
-}
+    min-width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #f9f9f9;
+  }
+  
+  .settings h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .settings .form-label {
+    margin: .5rem 0;
+  }
+  
+  .settings .form-control {
+    width: 100%;
+  }
+  
+  .settings .btn-primary {
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+  }
